[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/edit_list.gd" type="Script" id=1]

[node name="InputFieldDialog" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -36.0
margin_right = 150.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 70 )
popup_exclusive = true
window_title = "Create List"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "
"
}

[node name="TextEdit" type="LineEdit" parent="MarginContainer"]
margin_right = 284.0
margin_bottom = 26.0
size_flags_horizontal = 3
placeholder_text = "List Name"
caret_blink = true

[connection signal="about_to_show" from="." to="." method="_on_InputFieldDialog_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_InputFieldDialog_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_InputFieldDialog_custom_action"]
[connection signal="gui_input" from="MarginContainer/TextEdit" to="." method="_on_TextEdit_gui_input"]
